[gd_scene load_steps=2 format=3 uid="uid://hud_scene_001"]

[ext_resource type="Script" path="res://Scripts/GameHUD.gd" id="1"]

[node name="GameHUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 250.0
offset_bottom = 120.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="ScoreLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "分数: 0"
theme_type_variation = &"HeaderMedium"

[node name="DistanceLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "距离: 0m"

[node name="SpeedLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "速度: 0 km/h"

[node name="ComboLabel" type="Label" parent="."]
offset_left = 500.0
offset_top = 150.0
offset_right = 700.0
offset_bottom = 200.0
theme_type_variation = &"HeaderLarge"
text = ""
horizontal_alignment = 1
vertical_alignment = 1
